<resources>
    <string name="app_name">金融街</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
        <string name="title_error">错误提示</string>
    <string name="btn_ok">确定</string>
    <string name="btn_cancel">取消</string>
    <string name="message_notify">提示</string>
    <string name="logining">正在登录……</string>
    <string name="submit_data">正在提交数据……</string>
    <string name="add_data">正在获取数据……</string>
    <string name="err_data">暂无数据</string>
    <string name="posting">提交中……</string>
     <string name="bar_text1_text">行政服务</string>
    <string name="bar_text2_text">生活服务</string>
    <string name="bar_text3_text">监督提交</string>
    <string name="bar_text4_text">个人中心</string>
    <string name="tab_app_name">金融街无线交互服务平台V3.0</string>
    <string name="gov_info_title1">街道简介</string>
    <string name="gov_info_title2">服务事项</string>
    <string name="gov_info_title3">工商食药</string>
    <string name="gov_info_title4">食药安全</string>
    <string name="gov_info_title5">公安服务</string>
    <string name="gov_info_title6">街道周报</string>
    <string name="life_title1">宇翔图册</string>
    <string name="life_title2">公租自行车</string>
    <string name="life_title3">旅游文化</string>
    <string name="life_title4">社区医疗</string>
    <string name="life_title5">社区商圈</string>
    <string name="life_title6">健康服务</string>
   	<string name="life_title7">社区活动</string>
    <string name="life_title8">便民商铺</string>
    <string name="life_title9">银行服务</string>
     <string name="addtextview">添加照片</string>
     <string name="ortextview">或</string>
     <string name="phone">联系电话</string>
     <string name="describetextview">描述 </string>
    <string name="putin">提交</string>
    <string name="open_map">位置</string>
    <string name="speak">按住开始录音</string>
    <string name="is_feedback_needed">需要反馈</string>
    <string-array name="feedbackQuestion">
        <item>请选择类型</item>
        <item>行政服务</item>
        <item>社区服务</item>
        <item>城市管理</item>
        <item>社会管理</item>
        <item>应急处置</item>
        <item>其他</item>
    </string-array>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="email">邮件</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="receive_message">接收消息列表</string>
    <string name="jifen">监督提交次数</string>
    <string name="clear">清除缓存</string>
    <string name="credit">积分</string>
    <string name="config">配置</string>
    <string name="logout_button">退出登录</string>
    <string name="title_name">金融街</string>
    <string name="tab1">服务信息</string>
    <string name="tab2">动态公告</string>
    <string name="tab3">监督提交</string>
    <string name="tab4">个人中心</string>
    <string name="gover_discription">金融街简介</string>
    <string name="work_procedure">办事程序</string>
    <string name="contact_phone">联系电话</string>
    <string name="gover_news">政府动态</string>
    <string name="traffic_news">交通动态</string>
    <string name="street_news">街道动态</string>
    <string name="button1">登陆</string>
    <string name="button2">注册</string>
    <string name="button3">更新</string>
    <string name="text1">用户名</string>
    <string name="text2">密码</string>
    <string name="text3">电子邮件</string>
    <string name="loading_times">读取上报次数</string>
    <string name="title"> 分类</string>
    <string name="logined_user">登陆用户</string>
    <string name="logout">注销</string>
    <string name="submintted_feedback">已提交的监督</string>
    <string name="login_null">用户名和密码不能为空</string>
    <string name="current_location_f">您当前的位置:纬度:%1$f,经度:%2$f</string>
    <string name="current_location_d">您当前的位置:纬度:%1$d,经度:%2$d</string>
    <string name="network_error">您的网络出错啦！</string>
    <string name="key_error">您的授权Key不正确！</string>
    <string name="locating">正在确定您的位置，请稍等</string>
    <string name="ok_return">返回</string>
    <string name="title_open_gps">打开GPS</string>
    <string name="message_open_gps">是否现在打开GPS</string>
    <string name="dialog_ok">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="switch_view"> 切换视图</string>
    <string name="choose_view"> 请选择一个视图</string>
    <string name="display_overlay"> 显示图层</string>
    <string name="choose_overlay"> 请选择需要显示的图层</string>
    <string name="need_reply"> 是否需要回复</string>
    <string name="report_category_prompt">请选择监督提交类型</string>
    <string name="is_image_needed">提交图片</string>
    <string name="loading">加载中</string>
    <string-array name="award">
        <item>APP使用奖励</item>
        <item>工商举报奖励</item>
    </string-array>
    <string-array name="gongshang_array">
        <item>个体工商户设立登记</item>
        <item>个体工商户变更登记</item>
        <item>个体工商户注销登记</item>
        <item>食品流通许可设立</item>
        <item>食品流通许可变更</item>
        <item>食品流通许可注销</item>
        <item>如何进行投诉举报</item>
        <item>金融街地区内资企业年检</item>
    </string-array>
    <string-array name="total_class">
        <item>注册用户</item>
        <item>金融街新秀</item>
        <item>金融街卫士</item>
        <item>金融街达人</item>
    </string-array>
    <string-array name="procedure_list_first">
        <item>北京市城市居民低收入待遇申请审批办理规范</item>
        <item>北京市城市居民最低生活保障待遇申请审批办理规范</item>
        <item>城市特困人员医疗救助审批办理规范</item>
        <item>就业困难人员认定及加入公益性就业组织工作程序办理规范</item>
        <item>北京市城乡居民养老保险办理规范</item>
        <item>北京市城乡无社会保障老年居民养老保障办理规范</item>
        <item>城镇一老一小无业人员信息变更办理规范</item>
        <item>城镇一老一小无业人员减员事宜办理规范</item>
        <item>城镇居民异地就医办理规范</item>
        <item>城镇居民特种病审批办理规范</item>
        <item>城镇居民基本医疗保险办理规范</item>
        <item>自谋职业（自主创业）社会保险补贴申请办理规范</item>
        <item>一次性核发失业保险金办理规范</item>
        <item>灵活就业社会保险补贴申请办理规范</item>
        <item>失业人员申请退休办理规范</item>
        <item>失业人员申领住宅清洁能源分户自采暖补贴办理规范</item>
        <item>失业人员求职登记及职业指导业务办理规范</item>
        <item>小额贷款办理手续办理规范</item>
        <item>开具档案中的相关证明办理规范</item>
        <item>档案接收办理规范</item>
        <item>用工单位就业登记手续办理规范</item>
        <item>个人失业登记办理规范</item>
        <item>个人就业登记手续办理规范</item>
        <item>按月核发失业保险金办理规范</item>
        <item>退休人员医疗费报销工作办理规范</item>
        <item>社保卡申领办理规范</item>
        <item>社保卡挂失与补卡办理规范</item>
        <item>北京市城镇无业居民医疗费报销工作办理规范</item>
        <item>北京市城镇无业居民医疗费报销工作办理规范</item>
        <item>退休人员异地就医办理规范</item>
        <item>退休人员特种病审批办理规范</item>
        <item>退休人员基本医疗保险视同缴费年限认定审批工作办理规范</item>
        <item>退休人员工伤药费的报销办理规范</item>
        <item>社会化退休人员开具无档案证明办理规范</item>
        <item>社区管理退休人员申请享受自采暖补贴办理规范</item>
        <item>社会化退休人员养老金异地协助认证办理规范</item>
        <item>社会化退休人员生育费用报销办理规范</item>
        <item>社会化退休人员档案关系转出办理规范</item>
        <item>社会化退休人员丧葬补贴办理规范</item>
    </string-array>
    <string-array name="procedure_list_second">
        <item>查验《流动人口婚育证明》办理规范</item>
        <item>发放独生子女父母奖励费的办理规范</item>
        <item>发放独生子女父母年老时一次性奖励的办理规范</item>
        <item>流动人口“四术”报销办理规范</item>
        <item>流动人口一孩生育服务登记办理规范</item>
        <item>流动已婚育龄妇女采取长效避孕节育措施享受一次性奖励办理规范</item>
        <item>办理再生育一个子女《生育服务证》工作规范</item>
        <item>办理第二个子女随父入户计划生育手续工作规范</item>
        <item>办理可以生育第二个子女但不生育的一次性奖励工作规范</item>
        <item>发放独生子女意外伤残、死亡对其父母的一次性经济帮助工作规范</item>
        <item>对违反规定生育的公民征收社会抚养费工作规范</item>
        <item>审批独生子女死亡家庭特别扶助工作规范</item>
        <item>审批独生子女伤残家庭特别扶助工作规范</item>
        <item>病残儿医学鉴定工作规范</item>
    </string-array>
    <string-array name="procedure_list_third">
        <item>公共租赁住房配租资格初审、摇号、配租及后期管理办理规范</item>
        <item>经济适用住房配租资格初审、摇号、配租及后期管理办理规范</item>
        <item>廉租住房、经济适用住房、限价商品住房、公共租赁住房配租配售资格变更、取消办理规范</item>
        <item>廉租住房、经济适用住房、限价商品住房、公共租赁住房配租配售资格年度复核办理规范</item>
        <item>廉租住房配租资格初审、摇号、配租及后期管理办理规范</item>
        <item>限价商品住房配租资格初审、摇号、配租及后期管理办理规范</item>
    </string-array>
    <string-array name="procedure_list_forth">
        <item>核发《中华人民共和国残疾人证》办理规范</item>
        <item>残疾人生活补助审批办理规范</item>
        <item>残疾儿童少年康复补助办理规范</item>
        <item>残疾人学生和生活困难残疾人子女学生助学补助申请办理规范</item>
        <item>残疾人辅助器具服务工作办理指南</item>
        <item>个体就业残疾人社会保险补贴办理指南</item>
    </string-array>
    <string-array name="procedure_list_fifth">
        <item>“小帮手”电子服务器配备使用办理规范</item>
        <item>残疾军人丧葬补助费办理规范</item>
        <item>残疾军人优待抚恤关系转移办理规范</item>
        <item>发放孤儿基本生活费办理规范</item>
        <item>军烈属关系转移办理规范</item>
        <item>认定部分烈士子女办理规范</item>
        <item>申请95岁及以上老年人医疗费用补助办理规范</item>
        <item>申请居家养老（助残）服务券办理规范</item>
        <item>享受定期抚恤金的烈士遗嘱、因公牺牲军人遗嘱、病故军人遗嘱丧葬补助费办理规范</item>
        <item>60岁及以上老年人优待证办理规范</item>
        <item>65岁及以上老年人优待卡办理规范</item>
        <item>80岁及以上老年人养老服务补贴办理规范</item>
        <item>90岁及以上高龄老年人津贴办理规范</item>
        <item>城市特困人员临时救助审批办理规范</item>
    </string-array>
    <string-array name="procedure_list_sixth">
        <item>办理《独生子女父母光荣证》办理规范</item>
        <item>办理流动人口《生育服务联系单》（分普通版和生育保险专用版）</item>
        <item>第一个子女《生育服务证》办理规范</item>
        <item>第一个子女随父入户计划生育手续办理规范</item>
        <item>户籍流出的成年育龄妇女《流动人口婚育证明》的更换办理规范</item>
        <item>户籍流出的成年育龄妇女办理《流动人口婚育证明》的办理规范</item>
    </string-array>
    <string-array name="phone_names">
        <item>全响应管理指挥中心</item>
        <item>办理“一小”大病医疗保险</item>
        <item>人口与计生</item>
        <item>办理子女关系证明</item>
        <item>党群事务</item>
        <item>办理“一老”医保依据和流程</item>
        <item>失业人员档案转移管理</item>
        <item>金融街工商所信息咨询电话 </item>
        <item>社会事务</item>
        <item>办理职业介绍</item>
        <item>办理居民低谷电补贴</item>
        <item>办理失业人员开具证明</item>
        <item>办理社会化退休人员开具证明</item>
        <item>办理《就业失业登记证》</item>
        <item>亚健康呼叫中心</item>
    </string-array>
    <string-array name="phone_nums ">
        <item>66219688</item>
        <item>66219609</item>
        <item>66219624</item>
        <item>66219634</item>
        <item>66219634</item>
        <item>66219631</item>
        <item>66219607</item>
        <item>66169229</item>
        <item>66219634</item>
        <item>66219602</item>
        <item>66219497</item>
        <item>66219602</item>
        <item>66219593</item>
        <item>66219607</item>
        <item>66216988</item>
    </string-array>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_daily_list">DailyListActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="name">姓名</string>
    <string name="ent_password">确认密码</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="auto_push">是否自动推送</string>
    <string name="book">宇翔图册</string>
    <string name="gongshang">工商业务办理</string>
    <string name="product_out">下架商品列表</string>
    <string name="update">更新</string>
    <string name="brand">商标</string>
    <string name="model">规格型号</string>
    <string name="batch">生产批次</string>
    <string name="item">不合格项目</string>
    <string name="company">生产单位名称</string>
    <string name="party">当事人姓名或名称</string>
    <string name="daily_list">简报列表</string>
    <string name="tab2_1_text">金融街周报</string>
    <string name="tab2_2_text">工商动态</string>
    <string name="no_message">暂无消息！</string>
    <string name="clear_success">已成功清除缓存</string>
    <string name="browser">浏览器</string>
    <string name="startupmessage">动态信息</string>
    <string name="health_desc">金融街健康体验中心简介</string>
    <string-array name="health_array">
        <item>金融街健康体验中心简介</item>
        <item>办公室肌肉关节不适</item>
        <item>常见姿势问题</item>
        <item>科学健身</item>
        <item>运动损伤</item>
    </string-array>
    <string-array name="health_item_1">
        <item>上交叉综合征</item>
        <item>如何放松肩背部</item>
        <item>肱二头肌长头腱炎</item>
        <item>腰部不适的缓解</item>
        <item>颈部肌肉不适</item>
    </string-array>
    <string-array name="health_url_1">
        <item>ha01.htm</item>
        <item>ha02.htm</item>
        <item>ha03.htm</item>
        <item>ha04.htm</item>
        <item>ha05.htm</item>
    </string-array>
    <string name="bar_text11">办事指南</string>
    <string name="bar_text7">工商动态</string>
    <string name="bar_text8">消费提醒</string>
</resources>